--- a/frontend/src/components/Skills/Skills.scss
+++ b/frontend/src/components/Skills/Skills.scss
@@ -1,7 +1,8 @@
 .skills-title-main {
-  color: #000000;
-  font-size: 36px;
-  font-weight: 700;
+  color: #212529;
+  font-family: "Rubik", sans-serif;
+  font-size: 30px;
+  // font-weight: 700;
   margin-bottom: 15px;
   line-height: 50px;
   text-transform: uppercase;
