--- a/frontend/src/components/Work/Work.scss
+++ b/frontend/src/components/Work/Work.scss
@@ -1,11 +1,13 @@
 .works-container-div {
+  padding-top: 5%;
   // border: 1px solid blue !important;
   text-align: center;
 
   .works-title-main {
-    color: #000000;
-    font-size: 36px;
-    font-weight: 700;
+    color: #212529;
+    font-size: 30px;
+    font-family: "Rubik", sans-serif;
+    // font-weight: 700;
     margin-bottom: 15px;
     line-height: 50px;
     text-transform: uppercase;
@@ -23,6 +25,10 @@
       // border: 1px solid red;
       display: flex;
       justify-content: space-around;
+
+      .works-icons {
+        color: #854fee;
+      }
     }
   }
 }
