maybe final commit

--- a/frontend/src/components/NavBar/NavBar.scss
+++ b/frontend/src/components/NavBar/NavBar.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  border: 1px solid blue !important;
+  // border: 1px solid blue !important;
 
   display: flex;
   justify-content: space-between;
