--- a/frontend/src/components/Header/Header.scss
+++ b/frontend/src/components/Header/Header.scss
@@ -1,81 +1,60 @@
-.container {
-  // border: 1px solid blue !important;
-
-  display: flex;
+.header-container {
+  padding-top: 10rem;
   // border: 1px solid red;
-  justify-content: space-between;
-  // background: url(../../../public/axiom-pattern.png);
+  width: 100%;
 
-  @media screen and (max-width: 550px) {
-    flex-direction: column;
+  @media screen and (max-width: 768px) {
+    padding-top: 7rem;
   }
 
-  .header-text-div {
-    // border: 1px solid blue;
-    margin-top: 10%;
-    color: black;
+  .header-text-box {
+    padding-left: 5%;
+    width: 100%;
+    // border: 1px solid yellow;
 
-    @media screen and (max-width: 768px) {
-      margin-top: 20%;
+    .my-name {
+      font-family: "Dancing Script", cursive;
+      font-weight: 600 !important;
+      background: -webkit-linear-gradient(#4458dc, #854fee);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    @media screen and (max-width: 550px) {
-      margin-top: 30%;
-    }
 
-    .header-text-h3 {
-      font-size: 3vw;
-      line-height: 5rem !important;
-
+    h3 {
+      font-size: 3.5vw;
+      @media screen and (min-width: 769px) and (max-width: 899px) {
+        font-size: 5vw;
+      }
       @media screen and (max-width: 768px) {
-        line-height: 3.5rem !important;
-      }
-
-      @media screen and (max-width: 550px) {
-        font-size: 6vw !important;
-        line-height: 3.5rem !important;
+        font-size: 7vw;
       }
     }
-    .header-text-h1 {
-      line-height: 5rem !important;
-      font-size: 4vw;
 
-      .my-name {
-        font-family: "Dancing Script", cursive;
-        font-weight: 600 !important;
-        font-size: 60px;
-        background: -webkit-linear-gradient(#4458dc, #854fee);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
+    h1 {
+      font-size: 5vw;
+      line-height: 10vw;
+      @media screen and (min-width: 769px) and (max-width: 899px) {
+        font-size: 7.5vw;
+        line-height: 15vw;
       }
-
       @media screen and (max-width: 768px) {
-        line-height: 3.5rem !important;
-        .my-name {
-          font-size: 40px;
-        }
-      }
-      @media screen and (max-width: 550px) {
-        font-size: 8vw !important;
-        line-height: 3.5rem !important;
-        .my-name {
-          font-size: 35px;
-        }
+        font-size: 10vw;
+        line-height: 20vw;
       }
     }
-    .header-text-h5 {
-      line-height: 5rem !important;
+
+    h5 {
       font-size: 2vw;
-      @media screen and (max-width: 768px) {
-        line-height: 3.5rem !important;
+      @media screen and (min-width: 769px) and (max-width: 899px) {
+        font-size: 3vw;
       }
-      @media screen and (max-width: 550px) {
-        font-size: 4vw !important;
-        line-height: 3.5rem !important;
+      @media screen and (max-width: 768px) {
+        font-size: 4vw;
       }
     }
 
     .header-button-div {
-      // width: 50%;
+      margin-top: 5%;
       display: flex;
       justify-content: flex-start;
       // border: 1px solid red;
@@ -93,22 +72,28 @@
     }
   }
 
-  .header-image {
-    margin-top: 45%;
-    width: 30vw;
-    height: 30vw;
+  .header-image-box {
+    // border: 1px solid blue;
+    width: 100%;
+    overflow: hidden; //to prevent image going outside of div
 
-    @media screen and (max-width: 768px) {
-      margin-top: 75%;
-      width: 35vw;
-      height: 35vw;
-    }
-
-    @media screen and (max-width: 550px) {
-      width: 80vw;
-      height: 80vw;
-      margin-top: 5%;
-      margin-left: 10%;
+    .header-image {
+      width: 80%;
+      height: 90%;
+      display: block;
+      margin: auto;
+      margin-top: 10%;
     }
   }
+}
+
+.underline {
+  color: white;
+  text-decoration: underline;
+  text-decoration-color: black;
+
+  -webkit-user-select: none; /* Safari */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* IE10+/Edge */
+  user-select: none; /* Standard */
 }
